--- a/Edx.html
+++ b/Edx.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Hello World!</title>
-</head>
-<body>
+<html lang="en">
+    <head>
+        <title>Hello World!</title>
+    </head>
+    <body>
 
-<h1>Hello world!</h1>
-<p>This is the first file in my new Git Repo.</p>
+        <h1>Hello world!</h1>
+        <p>This is the first file in my new Git Repo.</p>
 
-</body>
+    </body>
 </html>
