--- a/Edx.html
+++ b/Edx.html
@@ -5,7 +5,9 @@
     </head>
     <body>
 
-        <h1>Hello world!</h1>
+        <h1>Hello world!!!</h1>
+        <h1>You're welcome here</h1>
+
         <p>This is the first file in my new Git Repo.</p>
 
     </body>
