Adding the H2 but it's need for styling

--- a/Edx.html
+++ b/Edx.html
@@ -6,10 +6,10 @@
     <body>
 
         <h1>Hello world!!!</h1>
-        <h1>You're welcome here</h1>
 
         <p>This is the first file in my new Git Repo.</p>
         <p>This line has been added by layth2 from the git web</p>
+        <h2> Everyone is welcomed here! </h2>
 
     </body>
 </html>
