--- a/Edx.html
+++ b/Edx.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         <title>Hello World it's leit!!</title>
+        <style>
+            h2 {
+                color: blue teal;
+            }
+        </style>
     </head>
     <body>
 
