Adding color to H2

--- a/Edx.html
+++ b/Edx.html
@@ -9,7 +9,7 @@
 
         <p>This is the first file in my new Git Repo.</p>
         <p>This line has been added by layth2 from the git web</p>
-        <h2> Everyone is welcomed here! </h2>
+        <h2 style="color: red" > Everyone is welcomed here! </h2>
 
     </body>
 </html>
