--- a/Edx.html
+++ b/Edx.html
@@ -10,12 +10,12 @@
     </head>
     <body>
 
-        <h1>Hello world!!!</h1>
+        <h1>Hello world!</h1>
 
         <p>This is the first file in my new Git Repo.</p>
 
         <p>This line has been added by layth2 from the git web</p>
-        <h2 style="color: red" > Everyone is welcomed here! </h2>
+        <h2> Everyone is welcomed here! </h2>
 
     </body>
 </html>
