Adding new pages

--- a/Edx.html
+++ b/Edx.html
@@ -6,16 +6,22 @@
             h2 {
                 color: blue teal;
             }
+            div{
+                font-style: italic; 
+                color: teal;
+            }
         </style>
     </head>
     <body>
 
-        <h1>Hello world!</h1>
-
+        <h1>Hello world</h1>
         <p>This is the first file in my new Git Repo.</p>
 
-        <p>This line has been added by layth2 from the git web</p>
         <h2> Everyone is welcomed here! </h2>
+        <div>
+            <h3> Let's talk about the cats!</h3>
+            <p> The cat, commonly referred to as the domestic cat or house cat, is the only domesticated species in the family Felidae. Recent advances in archaeology and genetics have shown that the domestication of the cat occurred in the Near East <mark> around 7500 BC </mark>. <br> Check <a href="https://en.wikipedia.org/wiki/Cat" target="_blank"> Wikipedia </a> link for more!</p>
+        </div>
 
     </body>
 </html>
